--- a/Front/contacts.html
+++ b/Front/contacts.html
@@ -298,10 +298,9 @@
     </div>
   </div>
 </div>
-
     <script src="./JS/jquery.min.js"></script>
-    <script src="./JS/bootstrap.min.js"></script>
     <script src="./JS/main.js"></script>
+    <script src="./JS/token.js"></script>
     <script src="./JS/Contacts/contacts.js"></script>
   </body>
 </html>
