--- a/Front/users.html
+++ b/Front/users.html
@@ -193,8 +193,8 @@
   </div>
 
   <script src="./JS/jquery.min.js"></script>
-  <script src="./JS/bootstrap.min.js"></script>
   <script src="./JS/main.js"></script>
+  <script src="./JS/token.js"></script>
   <script src="./JS/users/users.js"></script>
   </div>
 </body>
