--- a/Front/country.html
+++ b/Front/country.html
@@ -318,10 +318,9 @@
       </div>
     </div>
   </div>
-
   <script src="./JS/jquery.min.js"></script>
-  <script src="./JS/bootstrap.min.js"></script>
   <script src="./JS/main.js"></script>
+  <script src="./JS/token.js"></script>
   <script src="./JS/regions/regions.js"></script>
   </div>
 </body>
